correcting alignment and making items unhidden

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -72,7 +72,14 @@ footer {
   font-size: 1.25em
   font-weight: bolder;
 }
-.greybackground {
+.katmavis {
+  background-color: lightgrey;
+}
+.katmavisbox {
+  display: flex;
+  flex-direction: column;
+}
+.contactbackground {
   background-color: lightgrey;
 }
 .splash {
@@ -88,12 +95,25 @@ footer {
   width: auto;
   background-position: center;
 }
+.fancycat {
+  display: none;
+  width: 15.625em;
+  height: 15.625em;
+  border-radius: 50%;
+  margin: 2.8125em auto;
+}
+.flowercat {
+  display: none;
+  width: 15.625em;
+  height: 15.625em;
+  border-radius: 50%;
+  margin: 2.8125em auto;
+}
 .suitcat {
   width: 15.625em;
   height: 15.625em;
   border-radius: 50%;
   margin: 2.8125em auto;
-
 }
 .main {
   display: flex;
@@ -101,6 +121,10 @@ footer {
 }
 .getintouch {
   display: none;
+}
+.cats {
+  display: flex;
+  flex-direction: row;
 }
 
 /* On devices wider than 660px */
@@ -112,15 +136,25 @@ footer {
   body {
     margin: 0;
   }
+  nav {
+      padding: 1em;
+      text-align: left;
+  }
   .pagetitle {
     font-family: 'PT Sans Narrow', sans-serif;
     font-size: 1.5em;
     color: #323232;
     font-weight: bolder;
   }
-  nav {
-      padding: 1.5em;
-      text-align: center;
+  .splash {
+    background-image: url(https://raw.githubusercontent.com/LilithN/web_group_project_1/master/assets/images/kats-hero.jpg);
+    width: 100%;
+    position: relative;
+    height: 530px;
+    background-size: cover;
+  }
+  .main {
+    margin: 330px;
   }
   h1 {
     font-family: 'PT Sans Narrow', sans-serif;
@@ -128,34 +162,7 @@ footer {
     color: #323232;
     font-weight: bolder;
     text-align: center;
-    margin-top: 1.2em;
-  }
-  h2 {
-    font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 1.5em;
-    color: #00897f;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-align: center;
-  }
-
-  li {
-    font-family: 'PT Serif', serif;
-    font-size: 1em;
-    color: #323232;
-    padding-bottom: 1em;
-  }
-  ul {
-    list-style-type: none;
-  }
-  .hourscontact {
-    font-weight: bold;
-    text-transform: uppercase;
-  }
-  .address {
-    vertical-align: top;
-    font-weight: bold;
-    text-transform: uppercase;
+    margin-top: -9.8em;
   }
   p {
     font-family: 'PT Serif', serif;
@@ -165,53 +172,40 @@ footer {
     margin: 0 2em 2em 2em;
     word-spacing: 0.1em;
   }
-  a {
-    font-family: 'PT Serif', serif;
-    font-size: 1em;
-    color: #f26522;
-    font-weight: bold;
-    display: inline-block;
+  .katmavisbox {
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+    justify-content: space-between;
   }
-  footer {
-    background-color: #00897f;
-    text-align: center;
-    padding: 2em;
-  }
-  .foot {
-    color: white;
-    font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 1.25em
-    font-weight: bolder;
-  }
-  .greybackground {
+  .katmavis {
     background-color: lightgrey;
+    width: 520px;
   }
-  .splash {
-    background-position: center;
-    height: 17.5em;
-    background-image: url(https://raw.githubusercontent.com/LilithN/web_group_project_1/master/assets/images/kats-hero.jpg);
-    background-size: cover;
+.cats {
+  display: flex;
+  flex-direction: row;
+}
+  .fancycat {
+    display: inline-block;
+    width: 15.625em;
+    height: 15.625em;
+    border-radius: 50%;
+    margin: 2.8125em auto;
   }
-  .map {
-    background-image: url(https://raw.githubusercontent.com/LilithN/web_group_project_1/master/assets/images/kats-map.jpg);
-    background-size: cover;
-    height: 17.5em;
-    width: auto;
-    background-position: center;
+  .flowercat {
+    display: inline-block;
+    width: 15.625em;
+    height: 15.625em;
+    border-radius: 50%;
+    margin: 2.8125em auto;
   }
   .suitcat {
     width: 15.625em;
     height: 15.625em;
     border-radius: 50%;
     margin: 2.8125em auto;
+  }
 
-  }
-  .main {
-    display: flex;
-    flex-direction: column;
-  }
-  .getintouch {
-    display: none;
-  }
 
 }
